idf_component_register(
    SRCS 
        "esp-gyrologger.cpp" 
        "global_context.cpp"
        "wifi/http.cpp" 
        "bus/mini_i2c.c" 
        "bus/aux_i2c.cpp" 
        "misc/misc.cpp" 
        "hal/wdt_off.c" 
        "wifi/wifi.cpp" 
        "wifi/random_names.cpp" 
        "wifi/cam_control.cpp" 
        "misc/led_strip/led_strip.c"
        # "misc/display/src/display.cpp"
        # "misc/battery.cpp"

        "gyro/gyro_bmi160.cpp" 
        "gyro/gyro_mpu6050.cpp" 
        "gyro/gyro_icm42688.cpp" 
        "gyro/gyro_probe.cpp"
        "hal/fs.cpp"
        "pipeline/pt_filter.cpp" 
        "pipeline/gyro_ctx.cpp"
        "pipeline/logger.cpp"
        "ebin-encoder-cpp/lib/quant.cpp"
        "ebin-encoder-cpp/lib/compress.cpp"
        "ebin-encoder-cpp/lib/laplace_model.cpp"
        "ebin-encoder-cpp/lib/writer.cpp"
        "http/mongoose.c"
        "http/server.cpp"
    INCLUDE_DIRS "."
    LDFRAGMENTS "linker.lf")
